checkbox (0.16.4) saucy; urgency=low

  [ Jeff Lane ]
  * scripts/virtualization: script no longer fails when trying to cast an
    empty timeout setting in config file to int(). Added additional error
    handling. (LP: #1186259)

  [ Brendan Donegan ]
  * jobs/optical.txt.in - Added VERIFICATION section for cdrom-write job so that
    the Qt UI doesn't barf when it finds there is no such section (LP: #1185759)
  * qt/frontend/treemodel.cpp: Deselect a parent node only if all of its
    child nodes are actually unselected rather than partially selected as
    before. (LP: #1180342)
  * qt/frontend/qtfront.cpp, qtfront.h, checkbox_qt/qt_interface.py: Select
    appropriate radio button in showTest if the test already has a result set
    rather than just defaulting to skip always (LP: #1181952)

  [ Daniel Manrique ]
  * jobs/stress.txt.in: fixed a few inconsistent invocations of sleep_test.

  [ Sylvain Pineau ]
  * jobs/resource.txt.in: updated version of the package resource job command
    supporting both precise and newer releases (LP: #1184197)
  * scripts/audio_settings: Use the new pactl parser to guess the right profile
    to select for HDMI / DisplayPort tests.

 -- Brendan Donegan <brendan.donegan@canonical.com>  Fri, 31 May 2013 16:04:42 +0100

checkbox (0.16.3) saucy; urgency=low

  [ Sylvain Pineau ]
  * jobs/info.txt.in, scripts/efi_resource: parse the kern.log backups too.
  * scripts/gpu_test, jobs/suspend.txt.in: Call firefox instead of the default
    browser.

  [ Daniel Manrique ]
  * Expanded optical_drive resource command so it correctly handles systems
    with no optical drive (LP: #1182489)
  * Added missing plugin files to po/POTFILES.in so their strings are
    translatable (LP: #1183271)

 -- Brendan Donegan <brendan.donegan@canonical.com>  Fri, 31 May 2013 16:04:37 +0100

checkbox (0.16.2) saucy; urgency=low

  [ Alberto Milone ]
  * scripts/graphics_stress_test, scripts/rotation_test: make sure to